[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://gfx/Jellee-Roman.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fps.tscn" type="PackedScene" id=3]
[ext_resource path="res://gfx/coin.png" type="Texture" id=4]
[ext_resource path="res://gfx/cheese.png" type="Texture" id=5]
[ext_resource path="res://gfx/ui/turn.png" type="Texture" id=6]
[ext_resource path="res://gfx/ui/turn_p.png" type="Texture" id=7]
[ext_resource path="res://gfx/ui/jump.png" type="Texture" id=8]
[ext_resource path="res://gfx/ui/jump_p.png" type="Texture" id=9]
[ext_resource path="res://gfx/ui/pause.png" type="Texture" id=10]
[ext_resource path="res://gfx/ui/pause_p.png" type="Texture" id=11]
[ext_resource path="res://gfx/cd1.png" type="Texture" id=12]
[ext_resource path="res://gfx/cd2.png" type="Texture" id=13]
[ext_resource path="res://gfx/cd3.png" type="Texture" id=14]
[ext_resource path="res://game_panel.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 1
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/fonts/font = null

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 0.502706 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 5
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 0, 0, 0, 0 )
dark_color = Color( 0, 0, 0, 0 )
border_size = 7
border_blend = false
draw_bg = true

[sub_resource type="Theme" id=5]

ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 3 )
ProgressBar/styles/fg = SubResource( 4 )

[sub_resource type="Animation" id=6]

length = 4.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 4 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"start" } ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Canvas/UI/CountDown:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 4 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Canvas/UI/CountDown/1:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 2.9, 3.9 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ false, true, false ] }
tracks/3/type = "value"
tracks/3/path = NodePath("Canvas/UI/CountDown/1:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 2.9, 3.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("Canvas/UI/CountDown/2:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 1.9, 2.9 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ false, true, false ] }
tracks/5/type = "value"
tracks/5/path = NodePath("Canvas/UI/CountDown/2:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1.9, 2.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ] }
tracks/6/type = "value"
tracks/6/path = NodePath("Canvas/UI/CountDown/3:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0, 0.9, 1.9 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ false, true, false ] }
tracks/7/type = "value"
tracks/7/path = NodePath("Canvas/UI/CountDown/3:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = { "times":FloatArray( 0.9, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ] }
tracks/8/type = "value"
tracks/8/path = NodePath("Canvas/UI/GameUI:visibility/visible")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[node name="Game" type="Node2D" groups=[ "game", "coin_counters" ]]

script/script = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI" type="Control" parent="Canvas"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="GameUI" type="Control" parent="Canvas/UI"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="fps" parent="Canvas/UI/GameUI" instance=ExtResource( 3 )]

[node name="Coins" type="Label" parent="Canvas/UI/GameUI"]

editor/display_folded = true
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 427.0
margin/top = 0.0
margin/right = 604.0
margin/bottom = 78.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Canvas/UI/GameUI/Coins"]

transform/pos = Vector2( -43.8283, 40.2075 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Cheese" type="ProgressBar" parent="Canvas/UI/GameUI" groups=[ "mouse_energy" ]]

editor/display_folded = true
visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 5 )
margin/left = 48.0
margin/top = 3.0
margin/right = 342.0
margin/bottom = 37.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Sprite" type="Sprite" parent="Canvas/UI/GameUI/Cheese"]

transform/pos = Vector2( -26, 17 )
transform/scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 5 )

[node name="TurnButtonPosition" type="Control" parent="Canvas/UI/GameUI"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 105.0
margin/right = 105.0
margin/bottom = 1.0

[node name="TurnButton" type="TouchScreenButton" parent="Canvas/UI/GameUI/TurnButtonPosition"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
passby_press = false
action = "turn"
visibility_mode = 0

[node name="JumpButtonPosition" type="Control" parent="Canvas/UI/GameUI"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 105.0
margin/top = 104.0
margin/right = 1.0
margin/bottom = 1.0

[node name="JumpButton" type="TouchScreenButton" parent="Canvas/UI/GameUI/JumpButtonPosition"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
bitmask = null
passby_press = false
action = "jump"
visibility_mode = 0

[node name="PauseButton" type="TextureButton" parent="Canvas/UI/GameUI"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 65.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/scale = Vector2( 0.5, 0.5 )

[node name="CountDown" type="Control" parent="Canvas/UI"]

editor/display_folded = true
visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -40.0
margin/bottom = -40.0

[node name="Level" type="Label" parent="Canvas/UI/CountDown"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = -254.0
margin/right = -200.0
margin/bottom = -174.0
text = "Level 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="1" type="Sprite" parent="Canvas/UI/CountDown"]

visibility/visible = false
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 12 )

[node name="2" type="Sprite" parent="Canvas/UI/CountDown"]

visibility/visible = false
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 13 )

[node name="3" type="Sprite" parent="Canvas/UI/CountDown"]

visibility/visible = false
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 14 )

[node name="GamePanel" parent="Canvas/UI" instance=ExtResource( 15 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/countdown = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Canvas/UI/GameUI/PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="next_level" from="Canvas/UI/GamePanel" to="." method="_on_GamePanel_next_level"]

[connection signal="retry_level" from="Canvas/UI/GamePanel" to="." method="_on_GamePanel_retry_level"]

[connection signal="show_map" from="Canvas/UI/GamePanel" to="." method="_on_GamePanel_show_map"]


